src/styles.css
html {
  background-color: #fffbf5;
}

.App {
  font-family: sans-serif;
  text-align: left;
}

.App-header {
  display: flex;
  justify-content: space-between;
  gap: 1rem;
  margin-bottom: 8px;
}

.App-title {
  margin: auto auto;
  text-align: center;
  font-family: Cambria, Georgia, "Times New Roman", Times, serif;
  font-style: italic;
  font-weight: 100;
  font-size: 2rem;
}

.App-lock {
  float: right;
  font-size: 2rem;
  cursor: pointer;
}

.App-lock.locked {
  color: darkred;
}

.App-lock.unlocked {
  color: green;
}

.navigation {
  display: flex;
  flex-direction: row;
  align-items: center;
  align-self: flex-end;
}

.navigation p {
  margin: 0;
  padding: 0;
  margin-right: 16px;
}

.navigation i {
  font-size: 3rem;
  margin-right: 16px;
  cursor: pointer;
  color: #37526f;
}

.navigation i:disabled {
  cursor: defautl;
  color: #a5a5a5;
}

.version-remark {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  margin-left: 8px;
  margin-right: 0px;
  max-height: 80px;
  overflow: auto;
}

.version-remark img {
  width: 36px;
  height: 36px;
  border-radius: 5px;
  margin-right: 8px;
}

.version-remark span {
  font-size: 0.8rem;
  color: #464646;
}

.save textarea {
  width: 100%;
  height: 120px;
  margin: 0;
  padding: 8px;
  resize: none;
}

.save button {
  width: 120px;
  height: 30px;
  background-color: white;
  border: 1px solid #a5a5a5;
  border-radius: 4px;
  cursor: pointer;
  margin-top: 16px;
  margin-right: 16px;
}

.save i {
  font-size: 2rem;
  color: #37526f;
}

dialog {
  border: 1px solid #a5a5a5;
  outline: none;
  padding: 16px;
  box-sizing: border-box;
  border-radius: 10px;
  max-width: 700px;
  cursor: default;
}

